kubernetes/ggs-ingress/ggs-ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ggs-ingress-resource
  annotations: ###https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ggs
          servicePort: 80
